[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/TitleScreen/pixeboy-font/Pixeboy-z8XGD.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/HUD.gd" type="Script" id=2]
[ext_resource path="res://UI/EntityHealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/PlayerHealthBar.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -70.0
margin_bottom = 18.0
grow_horizontal = 0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 2 )
text = "Score: 0"
align = 1
valign = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -40.0
margin_bottom = -26.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 1 )
text = "HEJSAN"
align = 1
autowrap = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AmmoLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -99.0
margin_top = -30.0
margin_right = -75.0
margin_bottom = -12.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="WeaponLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -26.0
margin_right = 46.0
margin_bottom = -12.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 3 )
text = "++"

[node name="PlayerHealthBar" parent="." instance=ExtResource( 3 )]
visible = true
margin_left = 123.0
margin_top = 153.0
margin_right = 163.0
margin_bottom = 193.0
rect_scale = Vector2( 2, 0.7 )
script = ExtResource( 4 )

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
